--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
-  "name": "table_library_react",
-  "version": "0.1.0",
-  "private": true,
+  "name": "table-library-react",
+  "version": "0.1.2",
+  "author": "nicolas_duquesne",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NicolasDuquesne2/table_library_react.git"
+  },
+  "keywords": [
+    "react table lib",
+    "react",
+    "table",
+    "react table plugin",
+    "table",
+    "sort",
+    "filter",
+    "pagination"
+  ],
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
